--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
     "cssnano": "^5.0.6",
     "del": "^6.0.0",
     "eslint": "^7.29.0",
-    "eslint-config-semistandard": "^16.0.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-config-xo-space": "^0.28.0",
+    "eslint-plugin-unicorn": "^34.0.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
