--- a/package.json
+++ b/package.json
@@ -21,29 +21,29 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/lab": "^5.0.0-alpha.47",
+    "@mui/material": "^5.0.0",
     "@reduxjs/toolkit": "^1.6.1",
     "classnames": "^2.3.1",
-    "gatsby": "^3.10.2",
-    "gatsby-plugin-image": "^1.11.0",
-    "gatsby-plugin-material-ui": "^3.0.1",
-    "gatsby-plugin-sharp": "^3.11.0",
-    "gatsby-plugin-theme-ui": "^0.10.1",
-    "gatsby-source-filesystem": "^3.11.0",
-    "gatsby-transformer-sharp": "^3.11.0",
-    "gatsby-transformer-yaml": "^3.10.0",
+    "gatsby": "^3.14.0",
+    "gatsby-plugin-image": "^1.14.0",
+    "gatsby-plugin-material-ui": "next",
+    "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby-plugin-theme-ui": "^0.11.2",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-transformer-yaml": "^3.14.0",
     "gw2-ui-bulk": "0.10.39",
-    "jss": "^10.7.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "material-ui-popup-state": "^1.9.0",
+    "material-ui-popup-state": "^2.0.0-beta.1",
     "nouislider-react": "^3.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-jss": "^10.7.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
