--- a/.github/workflows/previews-cf.yml
+++ b/.github/workflows/previews-cf.yml
@@ -72,7 +72,7 @@ jobs:
           workspaces: wasm_module
         if: steps.rust-output-cache.outputs.cache-hit != 'true'
       - name: Compile Rust
-        run: pnpm turbo wasm
+        run: pnpm turbo wasm --color
         if: steps.rust-output-cache.outputs.cache-hit != 'true'
 
       - name: Build Cloudflare
