--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -63,7 +63,7 @@ jobs:
           workspaces: wasm_module
         if: steps.rust-output-cache.outputs.cache-hit != 'true'
       - name: Compile Rust
-        run: pnpm turbo wasm
+        run: pnpm turbo wasm --color
         if: steps.rust-output-cache.outputs.cache-hit != 'true'
 
       # Cloudflare pages
