--- a/turbo.json
+++ b/turbo.json
@@ -9,7 +9,13 @@
     },
     "typeCheck": {
       "dependsOn": ["wasm"],
-      "inputs": ["$TURBO_DEFAULT$", "!src/assets/**/*.yaml", "!**/*.md"]
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        "!wasm_module/pkg/**",
+        "!wasm_module/target/**",
+        "!src/assets/**/*.yaml",
+        "!**/*.md"
+      ]
     },
     "testData": {
       "inputs": ["$TURBO_DEFAULT$", "!wasm_module/**", "!**/*.md"]
@@ -19,16 +25,16 @@
       "outputs": ["src/assets/typevalidation/output/**"]
     },
     "wasm": {
-      "inputs": ["wasm_module/**"],
+      "inputs": ["wasm_module/**", "!wasm_module/pkg/**", "!wasm_module/target/**"],
       "outputs": ["wasm_module/pkg/**", "wasm_module/target/**"]
     },
     "wasmCheck": {
       "dependsOn": ["wasm"],
-      "inputs": ["wasm_module/**"]
+      "inputs": ["wasm_module/**", "!wasm_module/pkg/**", "!wasm_module/target/**"]
     },
     "wasmCheckAll": {
       "dependsOn": ["wasm"],
-      "inputs": ["wasm_module/**"]
+      "inputs": ["wasm_module/**", "!wasm_module/pkg/**", "!wasm_module/target/**"]
     }
   }
 }
