--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "serve": "vite preview --host",
     "build-cf": "VITE_HAS_CF=true vite build",
     "serve-cf": "VITE_HAS_CF=true wrangler pages dev --kv SHORT_LINKS -- pnpm serve",
-    "build-gh": "vite build --base /discretize-gear-optimizer/",
+    "build-gh": "vite build --base /discretize-old/",
     "build-all": "concurrently -g -c auto \"pnpm:build-cf --outDir dist-cf\" \"pnpm:build-gh --outDir dist-gh\"",
     "prettier": "prettier --write .",
     "prettierCheck": "prettier --check .",
